# PolyhedraCut

./: CMakeLists.txt
include/learnopengl/: mesh.h  model.h  shader_m.h
shaders/: model.fs  model.vs  sh.fs
src/: main.cc  main.cc.backup  obj_parser.cc  obj_parser.h  structures.cc  structures.h
